# django-python-advance-course

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: settings.py  urls.py
app/app/: settings.py
core/: admin.py  models.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py
core/tests/: test_admin.py  test_commands.py  test_models.py
user/: serializers.py  views.py
user/tests/: __init__.py  test_user_api.py
