[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jose Jimenez <jimenezbjosel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
drf-spectacular = "^0.26.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"